CCD-1576: Integrated Fortify Scan into Nightly Pipelines